--- a/Source/Journals/DTTeorico/CassettiRialFrery.tex
+++ b/Source/Journals/DTTeorico/CassettiRialFrery.tex
@@ -157,46 +157,35 @@ Images obtained from systems with coherent illumination such as laser, SAR, and 
 
 Statistical modeling of SAR images has become an essential tool for analyzing and interpreting data with speckle. 
 %%% ACF Si el párrafo anterior dirige la atención del lector al modelo multiplicativo, en este no se puede volver atrás. Organizar mejor, y no confundir la lectura entre amplitud e intensidad; sugiero trartar sólo intensidad.
-\textcolor{blue}{Different distributions have been proposed for modelling SAR images. Log-Normal and Weibull were introduced to caractherize high resolution data~\cite{oliverquegan98}, \textit{K} and Weibull were considered in~\cite{Oliver1993}, in~\cite{Tison2004} the authors present  Fisher distribution to model several kinds of areas. In~\cite{Li2011} the authors proposed a Generalized Gamma distribution for modeling SAR images where, for different values of the parameters, it can be obtained Weibull, \textit{K} Fisher distributions between others.}
+Different distributions have been proposed for modelling this kind of images. Log-Normal and Weibull were introduced to caractherize high resolution data~\cite{oliverquegan98}, \textit{K} and Weibull were considered in~\cite{Oliver1993}, in~\cite{Tison2004} the authors present  Fisher distribution to model several kinds of areas. In~\cite{Li2011} the authors proposed a Generalized Gamma distribution for modeling SAR images where, for different values of the parameters, it can be obtained Weibull, \textit{K} Fisher distributions between others.
 
-\textcolor{blue}{An alternative approach is the multiplicative model, which have been successfully used to described SAR data. It is based on the assumption that the return results from the product between two random variables: one corresponding to the backscatter (the unobserved truth) and the other to the speckle~\cite{oliverquegan98}. }
-%Other models have been used; Ref.~\cite{Gao2010} discusses several approaches and their relationships.
-
-%%% ACF Hasta acá 1/6/18 13:40
-%In recently years, the $\mathcal G$ model~\cite{Frery97} has been widely utilized to describe SAR imagery. 
-%The $K$ and $\mathcal G^0$ distributions are special cases of this model, the difference lies in the choice of the distribution for the backscatter.  
-%The latter has been widely utilized to describe this kind of images because it has the ability to discriminate textured and extremely textured areas better than other models~\cite{MejailJacoboFreryBustos:IJRS}. 
-%It is characterized by three parameters, the $\alpha$ parameter that allows to describe different areas in terms of their texture, the $\gamma$ parameter informs about the brightness of the image and the $L$ parameter is related to the signal-to-noise ratio. 
-%Therefore the accuracy in the parameters estimation is a crucial problem, in particular the $\alpha$ parameter, because it describes locally the target roughness.
-
-\textcolor{blue}{In recently years the $\mathcal G$ model~\cite{Frery97} has been widely utilized to depict the return of SAR images under the multiplicative model. It has the ability to discriminate textured and extremely textured areas better than other models~\cite{MejailJacoboFreryBustos:IJRS}. It is characterized by three parameters, the $\alpha$ parameter that allows to explain different areas in terms of their texture, the $\gamma$ parameter informs about the brightness of the image and the $L$ parameter is related to the signal-to-noise ratio. 
-Therefore the accuracy in the parameters estimation is a crucial problem, in particular the $\alpha$ parameter, because it describes locally the target roughness.}
+An alternative approach is the multiplicative model, which have been successfully used to described SAR data. It is based on the assumption that the return results from the product between two random variables: one corresponding to the backscatter (the unobserved truth) and the other to the speckle~\cite{oliverquegan98}. In recently years the $\mathcal G$ model~\cite{Frery97} has been widely utilized to depict the return of SAR images under this model, because it has the ability to discriminate textured and extremely textured areas better than other models~\cite{MejailJacoboFreryBustos:IJRS}. It is characterized by three parameters, the $\alpha$ parameter that allows to explain different areas in terms of their texture, the $\gamma$ parameter informs about the brightness of the image and the $L$ parameter is related to the signal-to-noise ratio. 
+Therefore the accuracy in the parameters estimation is a crucial problem, in particular the $\alpha$ parameter, because it describes locally the target roughness.
 
 Sundry authors have studied the problem of parameter estimation for the $\mathcal G^0$ family. 
 In Freitas et al.~\cite{Freitas2005} the authors used first and second moment of this distribution for intensity data ($\mathcal G_I^0$) to estimate the texture and scale parameters. 
 Vasconcellos et al.~\cite{VasconcellosFrerySilva:CompStat} proposed a second order correction for the bias in the estimation of the textured parameter for the $\mathcal G^0$ model for amplitud data ($\mathcal G_A^0$).  
-Li et al~\cite{Li2011} obtained an  expression for the parameters estimator for the generalized Gamma distribution based on second-kind cumulants and a second-order approximation for  Polygamma  function. Cribari-Neto et al.~\cite{CribariFrerySilva:CSDA} implemented resampling techniques to improve the parameter estimation for the $\mathcal G_I^0$ model. 
+Li et al~\cite{Li2011} obtained an  expression for the parameters estimator for the generalized Gamma distribution based on second-kind cumulants and a second-order approximation for  Polygamma  function. Cribari-Neto et al.~\cite{CribariFrerySilva:CSDA} implemented resampling techniques to improve the parameter estimation for the $\mathcal G_I^0$ model. Robustness is an important property  that is expected to have an estimator. Bustos et al.~\cite{BustosFreryLucini:Mestimators:2001} and Allende et al.~\cite{AllendeFreryetal:JSCS:05} proposed M and AM estimators to improve the performance of maximum likelihood estimator under
+contamination. They show that they proposal outperform the performance of maximum likelihood estimator but the presents  numerical problems specially with small samples. 
 
-\textcolor{blue}{Another approach to the parameter estimation problem based on logmoments and log-cumulants were studied in~\cite{nicolas2002}. These methods hinge on the relation between the moments of the distribution and the Mellin transform. The same idea was applied in~\cite{khan2014} to estimate the parameters for the $\mathcal{G}$ model in polarimetric SAR data and in the estimation for the parameters of the $\mathcal G_A^0$ distribution~\cite{Tison2004}. }
+Another approach to the parameter estimation problem based on logmoments and log-cumulants were studied in~\cite{nicolas2002}. These methods hinge on the relation between the moments of the distribution and the Mellin transform. The same idea was applied in~\cite{khan2014} to estimate the parameters for the $\mathcal{G}$ model in polarimetric SAR data and in the estimation for the parameters of the $\mathcal G_A^0$ distribution~\cite{Tison2004}. 
 
-\textcolor{blue}{Robustness is an important property  that is expected to have an estimator. Bustos et al.~\cite{BustosFreryLucini:Mestimators:2001} and Allende et al.~\cite{AllendeFreryetal:JSCS:05} proposed M and AM estimators to improve the performance of maximum likelihood estimator under
-contamination. They show that they proposal outperform the performance of maximum likelihood estimator but the presents  numerical problems specially with small samples. }
+Information Theory provides a measure, called divergence, for comparing two density functions. These divergence or stochastic distance have been widely studied in the literature and have multiple applications in signal and image processing~\cite{4218961}, medical image analysis diagnosis~\cite{5599869}, automatic region detection in SAR images~\cite{EdgeDetectionDistancesEntropiesJSTARS,SARSegmentationLevelSetGA0}, as a contrast measure to distinguish two image regions~\cite{Nascimento2009}, to obtain expressions for test statistics~\cite{ClassificationPolSARSegmentsMinimizationWishartDistances} among others.
+In~\cite{Basu2011} density-based distance have been studied with special attention in Hellinger distance as well as problems referred to hypothesis test based on divergences.
 
-\textcolor{blue}{Minimum Distance Estimators (MDEs) are another alternative to avenue the problem of parameter estimation of a distribution with good properties.
-They come from the idea of finding a parameter estimator as the value that minimizes some  distance measure between the empirical and the  theoretical distribution functions.
-Minimum Hellinger distance estimator and Cramer-von Mises distance were studied in~\cite{beran1977} and~\cite{Boos1981} respectively among others distances measure. Asymptotic and robustness properties were examinated in these works. Strongly consistency war proved in Wolfowitz~\cite{wolfowitz1953,wolfowitz1957}.}
-
-\textcolor{blue}{In Parr and Schucany~\cite{parr1982}, the authors proved that, under certain conditions, the minimum distance estimator between empirical distribution function and the theoretical distribution function are consistency. Cao et al.~\cite{cao1995minimum} propose minimizing a distance between the theoretical density function and an estimator of the underlying density function, using the classical symmetric kernel estimator,  to obtain minimum distance estimator. They prove, following~\cite{parr1982}, strongly consistence of these estimators under certain considerations and also study the asymptotic normality of them for the case of the $L_2$ metric.}
+Minimum Distance Estimators (MDEs) are another alternative to avenue the problem of parameter estimation of a distribution with good properties.
+They come from the idea of finding a parameter estimator as the value that minimizes some  distance measure between the empirical and the  theoretical distribution functions. Wolfowitz~\cite{wolfowitz1953,wolfowitz1957} has studied this class of estimators and proved strongly consistency under general conditions. In~\cite{Boos1981} a weighted Cramer-von Mises distance between the empirical distribution function and the true model was studied. The author showed that these estimators are consistency and asymptotically efficient under certain weight function. In~\cite{HettmanSperger1994} unweighted minimum distance estimators in a location-scale model, generated from Cramer-von Mises distance were studied. The author showed that these estimators are asymptotic normally, and have good efficiency properties as well as good robustness properties.
+The problem of estimate the proportion of mixture in a nonparametric mixture model were studied in~\cite{beran1977}. The author addressed this problem using minimum Hellinger distance estimator between a parametric mixture model and a nonparametric density estimator, and proved important properties such us strong consistency, asymptotic normality and asymptotic eficiency.  In Parr and Schucany~\cite{parr1982}, the authors proved that, under certain conditions, the minimum distance estimator between empirical distribution function and the theoretical distribution function are consistency.
+	
+Beran, in~\cite{beran1977} studied the properties of MDEs estimator but, the minimization is between the true density model and an appropriate nonparametric density estimator of the underlying density function.  In this work, the Hellinger distances was used and asymptotic and robustness properties were examinated. Cao et al.~\cite{cao1995minimum} propose minimizing a distance between the theoretical density function and an estimator of the underlying density function, using the classical symmetric kernel estimator,  to obtain minimum distance estimator. They prove, following~\cite{parr1982}, strongly consistence of these estimators under certain considerations and also study the asymptotic normality of them for the case of the $L_2$ metric.
 
 %In~\cite{beran1977} the author studies asymptotic and robustness properties of the minimum Hellinger distance estimator. 
 %In~\cite{Boos1981} a Cramer-von Mises distance with a weighted function is used to obtain asymptotically efficient estimators that arise from minimize this distance.
 
-\textcolor{blue}{Information Theory provides a measure, called divergence, for comparing two density functions. These divergence or stochastic distance have been widely studied in the literature and have multiple applications in signal and image processing~\cite{4218961}, medical image analysis diagnosis~\cite{5599869}, automatic region detection in SAR images~\cite{EdgeDetectionDistancesEntropiesJSTARS,SARSegmentationLevelSetGA0}, as a contrast measure to distinguish two image regions~\cite{Nascimento2009}, to obtain expressions for test statistics~\cite{ClassificationPolSARSegmentsMinimizationWishartDistances} among others.}
-In~\cite{Basu2011} density-based distance have been studied with special attention in Hellinger distance as well as problems referred to hypothesis test based on divergences.
 
 %\textcolor{blue}{These stochastic distance are used in~\cite{Nascimento2009} as a contrast measure to distinguish two image regions. Analytic expressions for test statistics based on stochastic distances were obtained in~\cite{ClassificationPolSARSegmentsMinimizationWishartDistances}, where the authors also proposed new classifier for Polarimetric SAR images using these distances. Many information on theoretic divergences measures are described in~\cite{Liese2006}.
 % }
-Gambini et al.~\cite{gambini2015} proposed an estimator of the texture parameter of the $\mathcal{G}_I^0$ density function by  minimizing the triangular \textcolor{blue}{stochastic} distance between the theoretical density function  and an estimation for the underlying density function using asymmetric kernels, in this case Inverse Gaussian kernel was used. The authors compared its performance with logcumulant and maximum likelihood estimators and obtained good results in terms of mean squared error, bias, convergence and robustness. 
+Gambini et al.~\cite{gambini2015} proposed an estimator of the texture parameter of the $\mathcal{G}_I^0$ density function combining MDEs with stochastic distance. They proposed was to  minimize the triangular stochastic distance between the theoretical density function  and an estimation for the underlying density function using asymmetric kernels, in this case Inverse Gaussian kernel was used. The authors compared its performance with logcumulant and maximum likelihood estimators and obtained good results in terms of mean squared error, bias, convergence and robustness. 
 The authors used a Monte Carlo study to show the performance of their proposal, but no theoretical results were shown.
 
 In this work we prove the consistency of the estimator presented in~\cite{gambini2015} and we generalized this result to other asymmetric kernels.
@@ -210,12 +199,7 @@ Consistency results of the minimum distance estimator is shown in Section~\ref{M
 
 \section{The $\mathcal{G}_I^0$ Model}
 \label{sec_SAR}
-
-Images generated with devices that employ coherent illumination are contaminated with speckle. 
-This kind of noise is neither Gaussian nor additive. 
-In the monopolarized case and intensity data, SAR images can be modeled as the product of two independent random variables, one corresponding to the backscatter $X$ and other to the speckle noise $Y$. 
-In this manner $Z=X Y  $ represents the return $Z$ in each pixel.
-%The multiplicative model with the $\mathcal{G}_I^{0}$ model is a good combination to successfully describe areas with different degree of texture~\cite{Frery97,MejailJacoboFreryBustos:IJRS}. 
+The images generated from devices that employ coherent illumination processes are contaminated with speckle noise. It is known that this kind of noise is neither Gaussian nor additive. The multiplicative model with the $\mathcal{G}_I^{0}$ model is a good combination to successfully describe areas with different degree of texture~\cite{Frery97,MejailJacoboFreryBustos:IJRS}. In the monopolarized case and intensity data, SAR images can be modeled as the product of two independent random variables, one corresponding to the backscatter $X$ and other to the speckle noise $Y$. In this manner $Z=X Y  $ represents the return $Z$ in each pixel under the multiplicative model.
 
 The speckle noise in intensity format $Y$ is modeled as a random variable with $\Gamma $ distribution, with unitary mean and shape parameter $L\geq1$, that indicates the relation signal-noise and is called the number of looks. The backscatter $X$ is considered to obey a reciprocal of $\Gamma(\alpha,\gamma) $ law. The $\alpha$ parameter is related to the texture of the image and is a negative value. The $\gamma$ parameter gives information of the brigthness of the image and is a positive value. This gives rise to the $\mathcal{G}_I^{0}$ distribution for the return $Z$.
 
