Llegando a la Sección IV

--- a/Bibliography/bib_julia.bib
+++ b/Bibliography/bib_julia.bib
@@ -769,7 +769,7 @@
 @ARTICLE{Conradsen2003,
   author = {Conradsen, K. and Nielsen, A. A. and Schou, J. and Skriver, H.},
   title = {A test statistic in the complex {W}ishart distribution and its application
-	to change detection in polarimetric {SAR} data},
+etric {SAR} data},
   journal = {IEEE Transactions on Geoscience and Remote Sensing},
   year = {2003},
   volume = {41},
@@ -5269,7 +5269,7 @@ booktitle = {Applied optics}
 
 @article{Freitas2005,
 author = {Freitas, Corina and Frery, Alejandro and Correia, Antonio},
-title = {The polarimetric 𝒢 distribution for SAR data analysis},
+title = {The polarimetric $\mathcal G$ distribution for SAR data analysis},
 journal = {Environmetrics},
 year={2005},
 volume = {16},
