Listo para mandar

--- a/Bibliography/bib_julia.bib
+++ b/Bibliography/bib_julia.bib
@@ -5519,11 +5519,21 @@ doi = {10.1109/IGARSS.2017.8127630}
 	journal = "Journal of Statistical Planning and Inference",
 	volume = "93",
 	number = "1",
-	pages = "51 - 69",
+	pages = "51--69",
 	year = "2001",
 	issn = "0378-3758",
 	doi = "https://doi.org/10.1016/S0378-3758(00)00169-5",
 	url = "http://www.sciencedirect.com/science/article/pii/S0378375800001695",
 	author = "Kai-Sheng Song",
 	keywords = "Heavy tails, Intrinsic shape measure, Kurtosis, Loglikelihood moments, Multivariate , Rényi information, Spectrum, Trigamma function"
+}
+
+@article{SequentialCorrespondenceKernel,
+	author = {D. Dov and R. Talmon and I. Cohen},
+	year = 2018,
+	journal = {IEEE Transactions on Signal Processing},
+	volume = 66,
+	number = 12,
+	pages = {3100--3111},
+	title = {Sequential Audio-Visual Correspondence With Alternating Diffusion Kernels},
 }
