--- a/Source/Journals/DTTeorico/CassettiRialFrery.tex
+++ b/Source/Journals/DTTeorico/CassettiRialFrery.tex
@@ -188,7 +188,7 @@ The same idea was applied by Khan and Guida~\cite{khan2014} to estimate the para
 
 Information Theory provides measure, called divergence, for comparing two density functions. 
 They have been studied in the literature and have multiple applications in 
-signal and image processing~\cite{4218961}, 
+signal and image processing~\cite{SequentialCorrespondenceKernel}, 
 medical image analysis diagnosis~\cite{5599869}, 
 automatic region detection in SAR images~\cite{EdgeDetectionDistancesEntropiesJSTARS,SARSegmentationLevelSetGA0}, 
 as a contrast measure to distinguish two image regions~\cite{Nascimento2009}, 
@@ -722,7 +722,7 @@ In this work the consistency of the minimum distance estimator of the  $\mathcal
 %	Her research interests are in advanced statistical techniques in SAR image processing and applied statistics.
 %\end{IEEEbiography}
 %
-%\begin{IEEEbiography}[{\includegraphics[scale=0.13]{../../../Images/Fotos/Tico}}]{Diego Rial} 
+%\begin{IEEEbiography}[{\includegraphics[scale=0.13]{../../../Im4218961ges/Fotos/Tico}}]{Diego Rial} 
 %	received the B.Sc. degree in Mathematics from the Universidad de Buenos Aires, Argentina. His doctorate degree was in Science from the Instituto de Matem\'atica Pura e Aplicada (IMPA, Río de Janeiro).
 %	He is currently an Associate Professor at Facultad de Ciencias Exactas y Naturales, Universidad de Buenos Aires. He is an Independent Researcher at CONICET - \textit{Consejo Nacional de Investigaciones Cient\'ificas y T\'ecnicas}, Argentina. His research interests are in nonlinear partial differential equations and numerical analysis.
 %\end{IEEEbiography}
