--- a/Source/Tesis/capitulo3.tex
+++ b/Source/Tesis/capitulo3.tex
@@ -38,6 +38,8 @@ Desventajas:
 
 \section{Sensores Remotos SAR}
 
+\textcolor{red}{Acá poner algo de historia de los sensores, e ir directamente a los más importantes actualmente. Hay que dar detalles de aquellos de los cuales usamos imágenes.}
+
 \section{Adquisición de Imágenes SAR}
 
 \section{Modelo Estadístico}
