--- a/Source/Tesis/capitulo4.tex
+++ b/Source/Tesis/capitulo4.tex
@@ -21,7 +21,7 @@ El principal aporte de esta tesis es proponer un nuevo método de estimación pa
 \section{Estimación Paramétrica}
 \subsection{Método de los Momentos}
 \subsection{Método de Máxima Verosimilitud}
-\subsection{LogCumulants}
+\subsection{LogCumulantes}
 
 \section{Estimación No Paramétrica}
 \subsection{Estimadores de Mínima Distancia}
