--- a/Source/Tesis/tesis.tex
+++ b/Source/Tesis/tesis.tex
@@ -30,6 +30,7 @@
 \usepackage[T1]{fontenc}
 \usepackage[numbers]{natbib}
 \usepackage{multirow}
+\usepackage{color}
 
 \newcommand*{\id}{{\normalfont\hbox{1\kern-0.15em \vrule width .8pt depth-.5pt}}}
 
